app prototype done

--- a/client/main.styl
+++ b/client/main.styl
@@ -1,3 +1,8 @@
+@import '../imports/ui/header/header.import'
+@import '../imports/ui/login/loginPage.import'
+@import '../imports/ui/profile/profilePage.import'
+@import '../imports/ui/location/locationPage.import'
+
 body
 	padding 0
 	margin 0
@@ -13,12 +18,11 @@ body
 	.container
 		background-color #fff
 		margin 40px auto
-		height calc(100% - 140px)
+		min-height calc(100% - 140px)
 
 		.panel
 			height 100%
 			margin-bottom 0
-	
 
-@import '../imports/ui/header/header.import'
-@import '../imports/ui/login/loginPage.import'
+
+
