--- a/imports/ui/header/header.import.styl
+++ b/imports/ui/header/header.import.styl
@@ -4,7 +4,7 @@
 
 header
 	background-color #213145
-	height 60px
+	min-height 60px
 	line-height 60px
 	padding 0 20px
 	margin 0 !important
@@ -24,7 +24,9 @@ header
 		color white
 		text-transform uppercase
 		text-decoration none
-		margin-right 20px
+		
+		&:not(:last-of-type)
+			margin-right 20px
 		
 		&:hover
 		&:visited
@@ -36,9 +38,10 @@ header
 			
 			&:after
 				content ''
-				position absolute
-				right -10px
+				display inline-block
+				position relative
+				top 6px
+				left 10px
 				height 25px
 				width 1px
 				background-color #fff
-				top -5px
