--- a/imports/ui/location/locationPage.import.styl
+++ b/imports/ui/location/locationPage.import.styl
@@ -19,3 +19,10 @@
 		max-height 600px
 		overflow-y auto
 		overflow-x hidden
+		
+	.help-block
+		margin 3px 0 0 0
+		font-size smaller
+		
+	.well
+		white-space pre
