--- a/imports/ui/location/locationPage.import.styl
+++ b/imports/ui/location/locationPage.import.styl
@@ -3,6 +3,11 @@
 	& > .row
 		margin 0 !important
 		padding 10px 0
+		
+	.panel-heading
+		padding 10px 15px
+		h4
+			margin 0
 
 	.panel-footer 
 		form
